--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="button-section">
             <label for="updateText">Enter Text:</label>
             <input type="text" id="updateText">
-            <button onclick="updateSection()">Update Section</button>
+            <button onclick="updateSection()">OK</button>
         </div>
         
         <div class="update-section">
@@ -94,3 +94,4 @@
         
     </body>
 </html>
+
